--- a/html/EasterEgg.html
+++ b/html/EasterEgg.html
@@ -160,7 +160,7 @@ canvas {
     c2.width = c3.width = window.innerWidth;
     c2.height = c3.height = window.innerHeight;
     ctx1.fillStyle = '#000';
-    const text = '鹿鹿,生日快乐！'
+    const text = '周钿,生日快乐！'
     let textWidth = 99999999;
 
     while (textWidth > window.innerWidth) {
